alb.tf
resource "aws_alb" "main" {
  name            = "IM-alb"
  subnets         = [aws_subnet.public.id, aws_subnet.public_subnet_db_2.id]
  security_groups = [aws_security_group.alb.id]
}

resource "aws_alb_target_group" "frontend_tg" {
  name        = "IM-tg"
  port        = 3000
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip"

  health_check {
    healthy_threshold   = "3"
    interval            = "50"
    port                = 3000
    protocol            = "HTTP" 
    matcher             = "200"
    timeout             = "3"
    path                = var.health_check_path
    unhealthy_threshold = "2"
  }
}

# Redirect all traffic from the ALB to the target group
resource "aws_alb_listener" "front_end" {
  load_balancer_arn = aws_alb.main.id
  port              = "80"
  protocol          = "HTTP"

  default_action {
    target_group_arn = aws_alb_target_group.frontend_tg.id
    type             = "forward"
  }
}
